--- a/packages/render-composer/package.json
+++ b/packages/render-composer/package.json
@@ -47,6 +47,10 @@
 		"typedoc": "^0.23.4",
 		"typescript": "^4.7.3"
 	},
+	"dependencies": {
+		"@react-three/fiber": "^8.3.1",
+		"postprocessing": "^6.28.5"
+	},
 	"peerDependencies": {
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0"
