--- a/packages/render-composer/package.json
+++ b/packages/render-composer/package.json
@@ -42,6 +42,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rimraf": "^3.0.2",
+		"three": "^0.143.0",
 		"ts-jest": "^28.0.8",
 		"tslib": "^2.4.0",
 		"typedoc": "^0.23.10",
@@ -53,7 +54,8 @@
 	},
 	"peerDependencies": {
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"three": "^0.143.0"
 	},
 	"babel": {
 		"presets": [
