--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.22.7",
+    "@react-three/fiber": "^8.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "render-composer": "^0.0.1"
+    "render-composer": "^0.0.1",
+    "three": "^0.143.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/three": "^0.143.1",
     "@vitejs/plugin-react": "^2.0.1",
     "typescript": "^4.7.3",
     "vite": "^3.0.7"
