--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.22.7",
     "@react-three/fiber": "^8.3.1",
+    "carbs": "^0.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "render-composer": "^0.0.1",
