--- a/packages/render-composer/package.json
+++ b/packages/render-composer/package.json
@@ -32,6 +32,7 @@
 		"@babel/preset-env": "^7.18.10",
 		"@babel/preset-react": "^7.18.6",
 		"@babel/preset-typescript": "^7.17.12",
+		"@react-three/fiber": "^8.3.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@types/jest": "^28.1.7",
 		"@types/react": "^18.0.17",
@@ -39,6 +40,7 @@
 		"@types/three": "^0.143.1",
 		"jest": "^28.1.1",
 		"jest-environment-jsdom": "^28.1.1",
+		"postprocessing": "^6.28.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"rimraf": "^3.0.2",
@@ -48,11 +50,9 @@
 		"typedoc": "^0.23.10",
 		"typescript": "^4.7.3"
 	},
-	"dependencies": {
-		"@react-three/fiber": "^8.3.1",
-		"postprocessing": "^6.28.5"
-	},
 	"peerDependencies": {
+		"@react-three/fiber": "^8.3.1",
+		"postprocessing": "^6.28.5",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"three": "^0.143.0"
