--- a/apps/examples/package.json
+++ b/apps/examples/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hmans/r3f-animate": "^0.0.3",
     "@react-three/drei": "^9.22.7",
     "@react-three/fiber": "^8.3.1",
-    "carbs": "^0.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "render-composer": "^0.1.4",
